--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".signup"></activity>
+        <activity
+            android:name=".QuizHome"
+            android:label="@string/title_activity_quiz_home"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".signup" />
         <activity android:name=".login" />
         <activity
             android:name=".openActivity2"
